# stellar-privacy-poc

.github/workflows/: build-web.yml  security.yml  test-circuits.yml  test-soroban.yml
contracts/: Cargo.toml
docker/: Dockerfile.circuits  Dockerfile.soroban  Dockerfile.web
docs/: README.md
sdk/: package.json
soroban/: Cargo.toml
web/: package.json
