[package]
name = "soroban-groth16-verifier"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.3"

[dev-dependencies]
soroban-sdk = { version = "23.0.3", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-with-logs]
inherits = "release"
